------------------------

To be released as 0.12pre3, 0.12rc1, or even 0.12.0.  This branch also
includes the changes listed under ``ELinks 0.11.5.GIT'' below.

* Preserve newlines in hidden input fields, and submit them as CRLF.
  Previously, they could turn into spaces or disappear entirely.
* Perl scripts can use modules that dynamically load C libraries, like
  XML::LibXML::SAX does.
* enhancement: Updated ISO 8859-7, ISO 8859-16, KOI8-R, and MacRoman.

ELinks 0.12pre2:
----------------

Released on 2008-09-21.  This release also included the changes listed
under ``ELinks 0.11.5'' below.

* bug 954, enhancement 952: Keep track of ECMAScript form and input
  objects instead of constructing new ones on every access.  When the
  corresponding ELinks internal objects are destroyed, detach the
  ECMAScript objects from them, to prevent crashes.  (Bug 954 was
  first added in ELinks 0.11.4, and the bug 620 fix in ELinks 0.12pre1
  made crashes more likely.)
* critical bug 1029 in user SMJS: Prefer JS_CallFunctionValue over
  JS_CallFunction, which can crash if given a closure.
* critical bug 1031: Use the same JSRuntime for both user SMJS and
  scripts on web pages, to work around SpiderMonkey bug 378918.
* bug 1013: Don't assume errno values are between 0 and 100000.
* bug 1022: Add connection.ssl.trusted_ca_file setting for GnuTLS.
  Before this, ELinks did not trust any certificate authorities when
  it used GnuTLS, so certificate verification always failed if you
  enabled it at connection.ssl.cert_verify.
* bug 1040: Blacklist servers that don't support TLS.  This reduces
  SSL errors especially in HTTP POST requests using GnuTLS.
* bugs 1007, 1041: Display unrecognized lines in FTP directory
  listings, instead of annoying the user with error messages.
* Hurd bug 22861: Work around select() falsely reporting exceptions
  in pipes.
* minor bug 951: SpiderMonkey scripting objects used to prevent ELinks
  from removing files from the memory cache.