@@ -38,7 +38,7 @@ void resume_mouse(void *);
 int start_thread(void (*)(void *, int), void *, int);
 unsigned char *get_clipboard_text(void);
 void set_clipboard_text(unsigned char *);
-void set_window_title(unsigned char *);
+void set_window_title(unsigned char *, int codepage);
 unsigned char *get_window_title(void);
 void block_stdin(void);
 void unblock_stdin(void);
