@@ -101,6 +101,7 @@ struct itrm {
 	unsigned char *orig_title;	/**< For restoring window title */
 
 	int verase;			/**< Byte to map to KBD_BS, or -1 */
+	int title_codepage;             /**< Codepage of terminal title */
 	unsigned int blocked:1;		/**< Whether it was blocked */
 	unsigned int altscreen:1;	/**< Whether to use alternate screen */
 	unsigned int touched_title:1;	/**< Whether the term title was changed */
